syntax = "proto3";

package evidenceos.v1;

service EvidenceOS {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc CreateClaim(CreateClaimRequest) returns (CreateClaimResponse);
  rpc CreateClaimV2(CreateClaimV2Request) returns (CreateClaimV2Response);
  rpc CommitArtifacts(CommitArtifactsRequest) returns (CommitArtifactsResponse);
  rpc FreezeGates(FreezeGatesRequest) returns (FreezeGatesResponse);
  rpc SealClaim(SealClaimRequest) returns (SealClaimResponse);
  rpc ExecuteClaim(ExecuteClaimRequest) returns (ExecuteClaimResponse);
  rpc ExecuteClaimV2(ExecuteClaimV2Request) returns (ExecuteClaimV2Response);
  rpc FetchCapsule(FetchCapsuleRequest) returns (FetchCapsuleResponse);
  rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse);
  rpc GetSignedTreeHead(GetSignedTreeHeadRequest) returns (GetSignedTreeHeadResponse);
  rpc GetInclusionProof(GetInclusionProofRequest) returns (GetInclusionProofResponse);
  rpc GetConsistencyProof(GetConsistencyProofRequest) returns (GetConsistencyProofResponse);
  rpc RevokeClaim(RevokeClaimRequest) returns (RevokeClaimResponse);
  rpc WatchRevocations(WatchRevocationsRequest) returns (stream RevocationEvent);
  rpc GetServerInfo(GetServerInfoRequest) returns (GetServerInfoResponse);
}

message HealthRequest {}
message HealthResponse { string status = 1; }

message ClaimMetadata {
  string lane = 1;
  uint32 alpha_micros = 2;
  string epoch_config_ref = 3;
  string output_schema_id = 4;
}

message TopicSignals {
  bytes semantic_hash = 1;
  bytes phys_hir_signature_hash = 2;
  bytes dependency_merkle_root = 3;
}

message ClaimMetadataV2 {
  string lane = 1;
  uint32 alpha_micros = 2;
  string epoch_config_ref = 3;
  string output_schema_id = 4;
}

message TopicSignalsV2 {
  bytes semantic_hash = 1;
  bytes phys_hir_signature_hash = 2;
  bytes dependency_merkle_root = 3;
}

message CreateClaimRequest {
  string claim_name = 1;
  ClaimMetadata metadata = 2;
  TopicSignals signals = 3;
  string holdout_ref = 4;
  uint32 epoch_size = 5;
  uint32 oracle_num_symbols = 6;
  uint64 access_credit = 7;
}

message CreateClaimResponse { bytes claim_id = 1; bytes topic_id = 2; }

message CreateClaimV2Request {
  string claim_name = 1;
  ClaimMetadataV2 metadata = 2;
  TopicSignalsV2 signals = 3;
  string holdout_ref = 4;
  uint32 epoch_size = 5;
  uint32 oracle_num_symbols = 6;
  uint64 access_credit = 7;
}

message CreateClaimV2Response { bytes claim_id = 1; bytes topic_id = 2; }

message ArtifactManifest {
  string name = 1;
  bytes canonical_bytes = 2;
  bytes digest = 3;
}

message CommitArtifactsRequest {
  bytes claim_id = 1;
  bytes wasm_hash = 2;
  bytes wasm_module = 3;
  repeated ArtifactManifest manifests = 4;
}

message CommitArtifactsResponse { bool accepted = 1; }

message FreezeGatesRequest { bytes claim_id = 1; }
message FreezeGatesResponse { bool frozen = 1; }

message SealClaimRequest { bytes claim_id = 1; }
message SealClaimResponse { bool sealed = 1; }

message ExecuteClaimRequest { bytes claim_id = 1; }
message ExecuteClaimResponse {
  bool certified = 1;
  double e_value = 2;
  bytes canonical_output = 3;
}

message ExecuteClaimV2Request { bytes claim_id = 1; }
message ExecuteClaimV2Response {
  bool certified = 1;
  double e_value = 2;
  bytes canonical_output = 3;
}

message MerkleInclusionProof {
  bytes leaf_hash = 1;
  uint64 leaf_index = 2;
  uint64 tree_size = 3;
  repeated bytes audit_path = 4;
}

message MerkleConsistencyProof {
  uint64 old_tree_size = 1;
  uint64 new_tree_size = 2;
  repeated bytes path = 3;
}

message FetchCapsuleRequest { bytes claim_id = 1; }
message FetchCapsuleResponse {
  bytes claim_id = 1;
  bytes capsule = 2;
  uint64 etl_index = 3;
  uint64 etl_tree_size = 4;
  bytes etl_root_hash = 5;
  bytes sth_signature = 6;
  MerkleInclusionProof inclusion = 7;
  MerkleConsistencyProof consistency = 8;
}

message SignedTreeHead {
  uint64 tree_size = 1;
  bytes root_hash = 2;
  bytes signature = 3;
}

message GetPublicKeyRequest {}
message GetPublicKeyResponse {
  bytes pubkey = 1;
  string key_id = 2;
}

message GetSignedTreeHeadRequest {}
message GetSignedTreeHeadResponse { SignedTreeHead sth = 1; }

message GetInclusionProofRequest {
  uint64 leaf_index = 1;
  uint64 tree_size = 2;
}
message GetInclusionProofResponse { MerkleInclusionProof proof = 1; }

message GetConsistencyProofRequest {
  uint64 old_tree_size = 1;
  uint64 new_tree_size = 2;
}
message GetConsistencyProofResponse { MerkleConsistencyProof proof = 1; }

message RevokeClaimRequest { bytes claim_id = 1; string reason_code = 2; }
message RevokeClaimResponse { bool revoked = 1; }

message WatchRevocationsRequest {}
message RevocationEvent {
  bytes claim_id = 1;
  string reason_code = 2;
  uint64 logical_epoch = 3;
}

message GetServerInfoRequest {}
message GetServerInfoResponse {
  string proto_hash = 1;
  string protocol_package = 2;
  string git_commit = 3;
  string build_timestamp = 4;
  repeated string key_ids = 5;
  string compatibility_min_rev = 6;
  string compatibility_max_rev = 7;
}
